# spec-mix

./: .gitignore  .markdownlint-cli2.jsonc  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.ko.md  README.ko.template.md  README.md  README.template.md  SECURITY.md  SUPPORT.md  lint.sh  package-lock.json  package.json  pyproject.toml  setup-hooks.sh  spec-driven.md
.claude/skills/git-commit-helper/: SKILL.md
.claude/skills/spec-validator/: SKILL.md
.devcontainer/: devcontainer.json
.githooks/: pre-commit
.github/workflows/: docs.yml  readme.yml  release.yml  spec-simple-release.yml
.github/workflows/scripts/: check-release-exists.sh  create-github-release.sh  create-release-packages.sh  generate-release-notes.sh  get-next-version.sh
docs/: README.md  docfx.json  i18n.md  index.md  installation.md  local-development.md  quickstart.md  toc.yml
docs/en/: 6pager.md  dashboard.md  features.md  i18n.md  index.md  installation.md  local-development.md  missions.md  quickstart.md  toc.yml
docs/ko/: 6pager.md  dashboard.md  features.md  i18n.md  index.md  installation.md  local-development.md  missions.md  quickstart.md  toc.yml
locales/en/: strings.json
locales/en/missions/research/commands/: dashboard.md  merge.md  review.md
locales/en/missions/research/templates/: analysis-template.md  research-question-template.md
locales/en/missions/software-dev/commands/: accept.md  checklist.md  clarify.md  dashboard.md
locales/en/missions/software-dev/constitution/: constitution-template.md
locales/en/missions/software-dev/templates/: checklist-template.md  tasks-template.md
locales/ko/: strings.json
locales/ko/missions/research/commands/: accept.md  checklist.md  dashboard.md  implement.md  (+4 more)
locales/ko/missions/software-dev/: mission.yaml
scripts/bash/: merge-feature.sh  move-task.sh  setup-worktree.sh
scripts/powershell/: check-prerequisites.ps1  create-new-feature.ps1  setup-plan.ps1  update-agent-context.ps1
src/specify_cli/: __init__.py  dashboard.py  dashboard_command.py  i18n.py  lang_command.py  mission.py  mission_command.py
src/specify_cli/static/dashboard/: dashboard.css  dashboard.js  index.html
src/specmix/: __init__.py  dashboard.py  dashboard_command.py  i18n.py  lang_command.py  mcp_server.py  migrations.py  mission.py  mission_command.py  mode.py  mode_command.py
src/specmix/locales/: config.json
src/specmix/locales/en/: strings.json
src/specmix/locales/ko/: strings.json
src/specmix/static/dashboard/: dashboard.css  dashboard.js  index.html
(+146 files in other folders)
