[project]
name = "spec-mix"
version = "0.0.1-alpha.3"
description = "Spec Mix - Enhanced Spec Kit with multi-language support, mission system, and web dashboard for Spec-Driven Development (SDD)."
requires-python = ">=3.11"
dependencies = [
    "typer",
    "rich",
    "httpx[socks]",
    "platformdirs",
    "readchar",
    "truststore>=0.10.4",
    "pyyaml",
    "packaging",
]

[project.urls]
Homepage = "https://github.com/dan1901/spec-mix"
Documentation = "https://dan1901.github.io/spec-mix/"
Repository = "https://github.com/dan1901/spec-mix"
Issues = "https://github.com/dan1901/spec-mix/issues"

[project.scripts]
spec-mix = "specmix:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/specmix"]

[tool.hatch.build]
include = [
    "src/specmix/**/*.py",
    "src/specmix/locales/**/*",
    "src/specmix/static/**/*"
]

