[project]
name = "spec-mix"
version = "0.0.1-alpha.18"
description = "Spec Mix - Enhanced Spec Kit with multi-language support, mission system, and web dashboard for Spec-Driven Development (SDD)."
requires-python = ">=3.11"
dependencies = [
    "typer",
    "rich>=13.0.0",
    "httpx>=0.24.0",
    "platformdirs",
    "readchar",
    "truststore>=0.10.4",
    "pyyaml>=6.0",
    "packaging",
    "mcp>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/dan1901/spec-mix"
Documentation = "https://dan1901.github.io/spec-mix/"
Repository = "https://github.com/dan1901/spec-mix"
Issues = "https://github.com/dan1901/spec-mix/issues"

[project.scripts]
spec-mix = "specmix:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/specmix"]

[tool.hatch.build]
include = [
    "src/specmix/**/*.py",
    "src/specmix/locales/**/*",
    "src/specmix/static/**/*"
]

